--- a/templates/_partials/_sidebar.html
+++ b/templates/_partials/_sidebar.html
@@ -4,15 +4,19 @@
       <li class="nav-item nav-profile">
         <a href="#" class="nav-link">
           <div class="nav-profile-image">
-            <img src=" {% static 'images/faces/face1.jpg' %}" alt="profile">
-            <span class="login-status online"></span>
-            <!--change to offline or busy as needed-->
+            {% if request.profile_user.image %}
+            <img src=" {{ request.profile_user.image.url }}" alt="{{ request.user.full_name }}">
+            {% else %}
+            <img src=" {% static 'images/avatar.jpg' %}" alt="{{ request.user.full_name }}">
+            {% endif %}
           </div>
           <div class="nav-profile-text d-flex flex-column">
-            <span class="font-weight-bold mb-2">David Grey. H</span>
-            <span class="text-secondary text-small">Project Manager</span>
+            <span class="font-weight-bold mb-2">{{ request.user.full_name }}</span>
+            <span class="text-secondary text-small">
+              {{ request.profile_user.designation | default:"--" }}
+            </span>
           </div>
-          <i class="mdi mdi-bookmark-check text-success nav-profile-badge"></i>
+          <i class="mdi mdi-check-decagram text-success nav-profile-badge"></i>
         </a>
       </li>
       <li class="nav-item">
@@ -51,6 +55,11 @@
           <i class="mdi mdi-contacts menu-icon"></i>
         </a>
       </li>
-     
+      <li class="nav-item">
+        <a class="nav-link" href="">
+          <span class="menu-title">Users</span>
+          <i class="mdi mdi-worker menu-icon"></i>
+        </a>
+      </li>
     </ul>
   </nav>
