--- a/templates/account/password_change.html
+++ b/templates/account/password_change.html
@@ -43,12 +43,12 @@
             {% csrf_token %}
             <div class="auth-form-light text-left font-weight-light px-5">   
                   <div class="form-group">
-                    <P class = "text-muted font-weight-light mb-0">Current Password:</p>
+                    <label class = "text-muted font-weight-light mb-0">Current Password:</label>
                     <input type="password" class="form-control form-control-lg" name="oldpassword" autocomplete="current-password" required="" aria-describedby="id_password_helptext" id="id_oldpassword">
                     </div>  
                     <div class="form-group">
-                        <P class = "text-muted font-weight-light mb-0">New Password:</p>
-                        <input type="password" class="form-control form-control-lg" name="password1" autocomplete="current-password" required="" aria-describedby="id_password_helptext" id="id_password1">
+                        <p><label class = "text-muted font-weight-light mb-0">New Password:</label>
+                        <input type="password" class="form-control form-control-lg" name="password1"  required="" aria-describedby="id_password_helptext" id="id_password1">
                     </div>
                     <span class="helptext" id="id_password1_helptext"></span></p>
                     <ul class="transparent-text font-weight-light">
@@ -66,7 +66,7 @@
                         </li>
                     </ul>
                     <div class="form-group">
-                        <P class = "text-muted font-weight-light mb-0">New Password (again):</p>
+                        <label class = "text-muted font-weight-light mb-0">New Password (again):</label>
                         <input type="password" class="form-control form-control-lg" name="password2" autocomplete="current-password" required="" aria-describedby="id_password_helptext" id="id_password2">
                     </div>  
         {% endslot %}
