--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -1,34 +1,59 @@
-{% extends "account/base_entrance.html" %}
+{% extends "../account_base.html" %}
+{% load static %}
 {% load allauth i18n %}
 {% block head_title %}
     {% trans "Signup" %}
 {% endblock head_title %}
 {% block content %}
-    {% element h1 %}
-        {% trans "Sign Up" %}
-    {% endelement %}
-    <p>
-        {% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}
-    </p>
-    {% url 'account_signup' as action_url %}
-    {% element form form=form method="post" action=action_url tags="entrance,signup" %}
-        {% slot body %}
-            {% csrf_token %}
-            {% element fields form=form unlabeled=True %}
-            {% endelement %}
-            {% if redirect_field_value %}
-                <input type="hidden"
-                       name="{{ redirect_field_name }}"
-                       value="{{ redirect_field_value }}" />
-            {% endif %}
-        {% endslot %}
-        {% slot actions %}
-            {% element button tags="prominent,signup" type="submit" %}
-                {% trans "Sign Up" %}
-            {% endelement %}
-        {% endslot %}
-    {% endelement %}
-    {% if SOCIALACCOUNT_ENABLED %}
-        {% include "socialaccount/snippets/login.html" with page_layout="entrance" %}
-    {% endif %}
+<div class="col-lg-4 mx-auto">
+    <div class="auth-form-light text-left p-5">
+        <div class="brand-logo">
+            <a class="navbar-brand brand-logo" href="index.html"><img src="{% static 'images/logo.png' %}" alt="logo" /></a>
+        </div>
+        {% element h2 %}
+        <h2 class = "font-weight-light my-3" >Sign Up</h2>
+        {% endelement %}
+        {% url 'account_signup' as action_url %}
+        {% element form form=form method="post" action=action_url tags="entrance,signup" %}
+            {% slot body %}
+                {% csrf_token %}
+                <div class="form-group">
+                    <label for="id_email" class = "text-muted font-weight-light mb-0">Email</label>
+                    <input type="email" class="form-control form-control-lg" name="email"  autocomplete="email" maxlength="320" required="" id="id_email">
+                </div>
+                <div class="form-group">
+                    <p><label for="id_password1" class = "text-muted font-weight-light mb-0">Password</label>
+                    <input type="password" class="form-control form-control-lg" name="password1"  autocomplete="current-password" required="" aria-describedby="id_password_helptext" maxlength="320" required="" id="id_password1">
+                </div> 
+                <span class="helptext" id="id_password1_helptext"></span></p>
+                <ul>
+                    <li>Your password can’t be too similar to your other personal information.</li>
+                    <li>Your password must contain at least 8 characters.</li>
+                    <li>Your password can’t be a commonly used password.</li>
+                    <li>Your password can’t be entirely numeric.</li>
+                </ul>
+                <div class="form-group">
+                    <label for="id_password1" class = "text-muted font-weight-light mb-0">Password</label>
+                    <input type="password" class="form-control form-control-lg" name="password1" required="" aria-describedby="id_password_helptext" maxlength="320" required="" id="id_password2">
+                </div> 
+                {% if redirect_field_value %}
+                    <input type="hidden"
+                            name="{{ redirect_field_name }}"
+                            value="{{ redirect_field_value }}" />
+                {% endif %}
+            {% endslot %}
+            {% slot actions %}
+                <button type="submit" class="btn btn-primary w-100">Sign Up</button>
+            {% endslot %}
+        {% endelement %}
+        {% if SOCIALACCOUNT_ENABLED %}
+            {% include "socialaccount/snippets/login.html" with page_layout="entrance" %}
+        {% endif %}
+        <p class="text-center my-4 font-weight-light">
+            {% blocktrans %}Already have an account?
+            <a href="{{ login_url }}">Sign In</a> {% endblocktrans %}   
+        </p>
+        <p class="text-muted font-weight-light text-center">Copyright © Tabernacle 2024</p>
+    </div>
+</div>
 {% endblock content %}
