--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -2,12 +2,7 @@
 {% load static %}
 {% load i18n allauth account %}
 {% block head_title %}
-<div class="page-header">
-    <h3 class="page-title">     
-    </h3>
-    <nav aria-label="breadcrumb"> 
-    </nav>
-  </div>
+{% trans "Forgot Password" %}
 {% endblock head_title %}
 {% block content %}
 <div class="row flex-grow justify-content-center">
