update crm and remarks for prospect

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9389,9 +9389,9 @@ fieldset:disabled .btn {
   flex-direction: column;
   width: 100%;
   pointer-events: auto;
-  background-color: #f2edf3;
+  background-color: #ffffff;
   background-clip: padding-box;
-  border: 1px solid #e6e6e6;
+  border: 1px solid #eeeeee;
   border-radius: 0.3rem;
   outline: 0;
 }
