--- a/templates/_partials/_navbar.html
+++ b/templates/_partials/_navbar.html
@@ -122,8 +122,8 @@
                 <a class="nav-link dropdown-toggle" id="profileDropdown" href="#" data-bs-toggle="dropdown"
                     aria-expanded="false">
                     <div class="nav-profile-img">
-                        {% if request.profile_user.image %}
-                        <img src=" {{ request.profile_user.image.url }}" alt="{{ request.user.full_name }}">
+                        {% if request.user.profile_user.image %}
+                        <img src=" {{ request.user.profile_user.image.url }}" alt="{{ request.user.full_name }}">
                         {% else %}
                         <img src=" {% static 'images/avatar.jpg' %}" alt="{{ request.user.full_name }}">
                         {% endif %}
