--- a/templates/base.html
+++ b/templates/base.html
@@ -89,5 +89,9 @@
     <script src="{% static 'js/app.js' %}"></script>
     <!-- End custom js for this page -->
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>  
+    
+    {% block app_scripts %}
+    {% endblock %}
+
   </body>
 </html>
