--- a/customer/templates/customer/assign_user_form.html
+++ b/customer/templates/customer/assign_user_form.html
@@ -33,7 +33,7 @@
     <div class="card">
       <div class="card-body">
         <h4 class="card-title text-center">Let's get started with the onboarding process</h4>
-        <p class="card-description text-center">Follow the 3-step process to onboard the client</p>
+        <p class="card-description text-center">Follow the 3-step process to onboard the customer</p>
 
         <div class="stepper-wrapper">
           <div class="stepper-item completed">
