--- a/customer/templates/customer/onboard_view.html
+++ b/customer/templates/customer/onboard_view.html
@@ -38,7 +38,7 @@
     <div class="card">
       <div class="card-body">
         <h4 class="card-title text-center">Let's get started with the onboarding process</h4>
-        <p class="card-description text-center">Follow the 3-step process to onboard the client</p>
+        <p class="card-description text-center">Follow the 3-step process to onboard the customer</p>
 
         <div class="stepper-wrapper">
           <div class="stepper-item active">
@@ -55,10 +55,9 @@
           </div>
         </div>
 
-        <form class="forms-sample border-top py-5" action="{% url 'customer:onboard' %}" method="POST"
+        <form class="forms-sample border-top py-5" action="{% url 'customer:onboard' customer.uuid %}" method="POST"
           enctype="multipart/form-data">
           {% csrf_token %}
-          <div class="text-center">Customer Info</div>
           {% include 'customer/profile_form.html' %}
           
           <button type="submit" class="btn btn-gradient-primary me-2">Continue</button>
