--- a/customer/templates/customer/profile_form.html
+++ b/customer/templates/customer/profile_form.html
@@ -3,7 +3,7 @@
 <div class="row">
     <div class="col col-md-8">
         <div class="form-group">
-            <label for="{{ customer_profile_form.legal_name.id_for_label }}">Legal Name *</label>
+            <label for="{{ customer_profile_form.legal_name.id_for_label }}">Subscription Name *</label>
             {{ customer_profile_form.legal_name }}
         </div>
         <div class="form-group">
