--- a/prospect/templates/prospect/list_view.html
+++ b/prospect/templates/prospect/list_view.html
@@ -117,7 +117,7 @@
                       <i class="mdi mdi-pencil-box-outline me-2"></i>
                       Edit info
                   </a>
-                  <a class="dropdown-item" href="{}">
+                  <a class="dropdown-item" href="{% url 'prospect:update_poc' prospect.uuid %}">
                     
                       <i class="mdi mdi mdi-contacts me-2"></i>
                       Update contacts persons
