--- a/customer/templates/customer/onboard_view.html
+++ b/customer/templates/customer/onboard_view.html
@@ -35,7 +35,7 @@
           enctype="multipart/form-data">
           {% csrf_token %}
           <div class="text-center">Customer Info</div>
-          {% include 'customer/profile_form.html' %}
+          {% include 'customer/profile_form.html' with customer_profile_form=customer_profile_form profile=profile %}
           
           <button type="submit" class="btn btn-gradient-primary me-2">Continue</button>
           <a href="{% url 'customer:list' %}" type="button" class="btn btn-light">Cancel</a>
