--- a/customer/templates/customer/profile_form.html
+++ b/customer/templates/customer/profile_form.html
@@ -4,41 +4,47 @@
     <div class="col col-md-8">
         <div class="form-group">
             <label for="{{ customer_profile_form.legal_name.id_for_label }}">Legal Name *</label>
-            {{ customer_profile_form.legal_name }}
+            {% comment %} {% if profile %}
+                <input type="text" class="form-control" name="{{ customer_profile_form.legal_name.name }}" id="{{ customer_profile_form.legal_name.id_for_label }}" value="{{ profile.legal_name }}" required>
+            {% else %} {% endcomment %}
+                {{ customer_profile_form.legal_name }}
+            {% comment %} {% endif %} {% endcomment %}
         </div>
         <div class="form-group">
-            <label
-                for="{{ customer_profile_form.display_name.id_for_label }}">Display Name*</label>
-            {{ customer_profile_form.display_name }}
+            <label for="{{ customer_profile_form.display_name.id_for_label }}">Display Name*</label>
+            {% comment %} {% if profile %}
+                <input type="text" class="form-control" name="{{ customer_profile_form.display_name.name }}" id="{{ customer_profile_form.display_name.id_for_label }}" value="{{ profile.display_name }}" required>
+            {% else %} {% endcomment %}
+                {{ customer_profile_form.display_name }}
+            {% comment %} {% endif %} {% endcomment %}
         </div>
         <div class="form-group">
-            <label for="{{ display_name.short_name.id_for_label }}">
-                Short Name or Abbreviation *
-            </label>
-            {{ customer_profile_form.short_name }}
+            <label for="{{ customer_profile_form.short_name.id_for_label }}">Short Name or Abbreviation *</label>
+            {% comment %} {% if profile %}
+                <input type="text" class="form-control" name="{{ customer_profile_form.short_name.name }}" id="{{ customer_profile_form.short_name.id_for_label }}" value="{{ profile.short_name }}" required>
+            {% else %} {% endcomment %}
+                {{ customer_profile_form.short_name }}
+            {% comment %} {% endif %} {% endcomment %}
         </div>
     </div>
     <div class="col">
         <div class="form-group text-center">
             <label for="{{ customer_profile_form.profile_picture.id_for_label }}" class="text-uppercase fw-bold"> Upload Logo *</label>
-            {% if customer_profile_form.instance.profile_picture %}
-            <div>
-                <img src="{{ customer_profile_form.instance.profile_picture.url }}" alt="Profile Picture" width="100%" />
-            </div>
+            {% if profile_instance.profile_picture %}
+                <div>
+                    <img src="{{ profile_instance.profile_picture.url }}" alt="Profile Picture" width="100%" />
+                </div>
             {% else %}
-            <div>
-                <img src="{% static 'images/avatar.jpg' %}" alt="Default Profile Picture" width="75%">
-            </div>
+                <div>
+                    <img src="{% static 'images/avatar.jpg' %}" alt="Default Profile Picture" width="75%">
+                </div>
             {% endif %}
             <div class="my-3">
                 {% if customer_profile_form.profile_picture.value %}
-                <label
-                    for="{{ customer_profile_form.profile_picture.auto_id }}-clear_id">Remove photo</label>
-                <input type="checkbox" name="{{ customer_profile_form.profile_picture.html_name }}-clear"
-                    id="{{ customer_profile_form.profile_picture.auto_id }}-clear_id" />
+                    <label for="{{ customer_profile_form.profile_picture.auto_id }}-clear_id">Remove photo</label>
+                    <input type="checkbox" name="{{ customer_profile_form.profile_picture.html_name }}-clear" id="{{ customer_profile_form.profile_picture.auto_id }}-clear_id" />
                 {% endif %}
-                <input type="file" class="form-control file-upload-info" name="{{ customer_profile_form.profile_picture.html_name }}"
-                    id="{{ customer_profile_form.profile_picture.id_for_label }}">
+                <input type="file" class="form-control file-upload-info" name="{{ customer_profile_form.profile_picture.html_name }}" id="{{ customer_profile_form.profile_picture.id_for_label }}">
             </div>
         </div>
     </div>
