--- a/customer/templates/customer/list_view.html
+++ b/customer/templates/customer/list_view.html
@@ -120,7 +120,7 @@
                       <i class="mdi mdi-pencil-box-outline me-2"></i>
                       Edit Customer Info
                     </a>
-                    <a class="dropdown-item" href="#">
+                    <a class="dropdown-item" href="{% url 'customer:update_poc' customer.uuid %}">
                       <i class="mdi mdi mdi-contacts me-2"></i>
                       Update Contact Persons
                     </a>
