--- a/contact/templates/contact/create_view.html
+++ b/contact/templates/contact/create_view.html
@@ -35,7 +35,7 @@
           {% csrf_token %}
           {% include 'contact/contact_form.html' %}
           <button type="submit" class="btn btn-gradient-primary me-3">Save Contact</button>
-          <a href="{% url 'contact:list' %}" type="button" class="btn btn-light">Cancel</a>
+          <a href="{% url 'contact:list' %}" type="button" class="btn btn-outline-primary">Cancel</a>
         </form>
       </div>
     </div>
