--- a/customer/templates/customer/edit_view.html
+++ b/customer/templates/customer/edit_view.html
@@ -45,7 +45,7 @@
           {% include 'customer/customer_prospect_form.html' %}
           
           <button type="submit" class="btn btn-gradient-primary me-2">Continue</button>
-          <a href="{% url 'customer:list' %}" type="button" class="btn btn-light">Cancel</a>
+          <a href="{% url 'customer:list' %}" type="button" class="btn btn-outline-primary">Cancel</a>
         </form>
       </div>
     </div>
