--- a/customer/templates/customer/onboard_view.html
+++ b/customer/templates/customer/onboard_view.html
@@ -62,7 +62,7 @@
           {% include 'customer/profile_form.html' with customer_profile_form=customer_profile_form profile=profile %}
           
           <button type="submit" class="btn btn-gradient-primary me-2">Continue</button>
-          <a href="{% url 'customer:list' %}" type="button" class="btn btn-light">Cancel</a>
+          <a href="{% url 'customer:list' %}" type="button" class="btn btn-outline-primary">Cancel</a>
         </form>
       </div>
     </div>
