--- a/prospect/templates/prospect/edit_view.html
+++ b/prospect/templates/prospect/edit_view.html
@@ -26,8 +26,8 @@
                   <h4 class="card-title">Prospect Information</h4>
                   <p class="card-description">Update prospect details</p>
                   {% include 'prospect/prospect_form.html' %}
-                  <button type="submit" class="btn btn-primary me-3">Update Prospect</button>
-                  <a href="{% url 'prospect:list' %}" type="button" class="btn btn-light">Cancel</a>
+                  <button type="submit" class="btn btn-gradient-primary me-3">Update Prospect</button>
+                  <a href="{% url 'prospect:list' %}" type="button" class="btn btn-outline-primary">Cancel</a>
               </form>
           </div>
       </div>
