--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -39,7 +39,7 @@
                         </div>
                     {% endslot %}
                     {% slot actions %}
-                    <button type="submit" class="my-1 btn btn-primary w-100">
+                    <button type="submit" class="my-1 btn btn-gradient-primary w-100">
                         Reset Password        
                     </button>
                     {% endslot %}
