--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -46,7 +46,7 @@
         {% endif %}
         {% endslot %}
         {% slot actions %}
-        <button type="submit" class="btn btn-primary w-100">Sign Up</button>
+        <button type="submit" class="btn btn-gradient-primary w-100">Sign Up</button>
         {% endslot %}
         {% endelement %}
         {% if SOCIALACCOUNT_ENABLED %}
