--- a/contact/templates/contact/edit_view.html
+++ b/contact/templates/contact/edit_view.html
@@ -36,11 +36,10 @@
         <form class="forms-sample" method="POST" enctype="multipart/form-data">
           {% csrf_token %}
           {% include 'contact/contact_form.html' %}
-
           <div class="d-flex justify-content-between align-items-center">
               <div>
-                  <button type="submit" class="btn btn-gradient-primary me-2">Update CONTACT</button>
-                  <a href="{% url 'contact:list' %}" type="button" class="btn btn-light">Cancel</a>
+                  <button type="submit" class="btn btn-gradient-primary me-2">Update Contact</button>
+                  <a href="{% url 'contact:list' %}" type="button" class="btn btn-outline-primary">Cancel</a>
               </div>
               <div>
                   <a class="text-danger" id="deleteButton" data-bs-toggle="modal" data-bs-target="#deleteContactModal">Delete Contact</a>
@@ -63,7 +62,7 @@
               <p>Are you sure you want to Delete this Contact?</p>
           </div>
           <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+              <button type="button" class="btn btn-outline-danger" data-bs-dismiss="modal">Cancel</button>
               <form method="POST" action="{% url 'contact:delete' contact_id %}">
                   {% csrf_token %}
                   <button type="submit" class="btn btn-danger">Delete Contact</button>
