--- a/prospect/templates/prospect/_partials/_crm_form.html
+++ b/prospect/templates/prospect/_partials/_crm_form.html
@@ -16,7 +16,7 @@
         </div>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-outline-success" data-bs-dismiss="modal">Cancel</button>
         <button type="submit" class="btn btn-gradient-success">Update</button>
       </div>
   </form>
