--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -38,7 +38,7 @@
 
         {% slot actions %}
 
-        <button type="submit" class="btn btn-primary w-100">Login</button>
+        <button type="submit" class="btn btn-gradient-primary w-100">Login</button>
         <div class="my-2 d-flex justify-content-between align-items-center">
             <div class="form-check">
                 <label class="form-check-label text-muted">
