--- a/templates/account/password_change.html
+++ b/templates/account/password_change.html
@@ -79,7 +79,7 @@
                         {% endslot %}
                         {% slot actions %}
                         <div class="my-2 d-flex justify-content-between align-items-center">
-                            <button type="submit" class="my-1 btn btn-primary">
+                            <button type="submit" class="my-1 btn btn-gradient-primary">
                                 Change Password
                             </button>
                             <a href="{% url 'account_reset_password'%}" class="auth-link">Forgot password?</a>
