--- a/customer/templates/customer/_partials/_info_view.html
+++ b/customer/templates/customer/_partials/_info_view.html
@@ -90,7 +90,7 @@
     </div>
 </div>
 <div class="modal-footer">
-    <a class="auth-link" href="{% url 'customer:edit-info' customer.uuid %}">
+    <a class="auth-link" href="{% url 'customer:update-info' customer.uuid %}">
         <i class="mdi mdi-pencil-box-outline me-2"></i>
         Edit Customer Info
     </a>
