--- a/contact/templates/contact/edit_view.html
+++ b/contact/templates/contact/edit_view.html
@@ -42,7 +42,7 @@
                   <a href="{% url 'contact:list' %}" type="button" class="btn btn-outline-primary">Cancel</a>
               </div>
               <div>
-                  <a class="text-danger" id="deleteButton" data-bs-toggle="modal" data-bs-target="#deleteContactModal">Delete Contact</a>
+                  <a class="text-danger" id="deleteButton" data-bs-toggle="modal" data-bs-target="#deleteModal">Delete Contact</a>
               </div>
           </div>
       </form>     
@@ -51,19 +51,19 @@
   </div>
 </div>
 
-<div class="modal fade" id="deleteContactModal" tabindex="-1" aria-labelledby="deleteContactModalLabel" aria-hidden="true">
+<div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content">
           <div class="modal-header">
-              <h3 class="modal-title" id="deleteContactModalLabel">Delete Contact</h3>
+              <h3 class="modal-title" id="deleteModalLabel">Delete Contact</h3>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
-              <p>Are you sure you want to Delete this Contact?</p>
+              <p>Are you sure you want to delete this contact?</p>
           </div>
           <div class="modal-footer">
               <button type="button" class="btn btn-outline-danger" data-bs-dismiss="modal">Cancel</button>
-              <form method="POST" action="{% url 'contact:delete' contact_id %}">
+              <form method="POST" action="{% url 'contact:delete' contact_form.instance.uuid %}">
                   {% csrf_token %}
                   <button type="submit" class="btn btn-danger">Delete Contact</button>
               </form>
