--- a/customer/templates/customer/edit_view.html
+++ b/customer/templates/customer/edit_view.html
@@ -29,9 +29,8 @@
   <div class="col-12 grid-margin stretch-card">
     <div class="card">
       <div class="card-body">
-        
-        <form method="POST"
-        data-url="{% url 'misc:ajax-load-states' %}"  enctype="multipart/form-data">
+
+        <form method="POST" data-url="{% url 'misc:ajax-load-states' %}" enctype="multipart/form-data">
           {% csrf_token %}
           <h4 class="card-title">SaaS Information</h4>
           <p class="card-description">Update details related to SaaS subscription </p>
@@ -43,12 +42,41 @@
           <p class="card-description">Update other details </p>
 
           {% include 'customer/customer_prospect_form.html' %}
-          
-          <button type="submit" class="btn btn-gradient-primary me-2">Continue</button>
-          <a href="{% url 'customer:list' %}" type="button" class="btn btn-outline-primary">Cancel</a>
+
+          <div class="d-flex justify-content-between align-items-center">
+            <div>
+              <button type="submit" class="btn btn-gradient-primary me-2">Continue</button>
+              <a href="{% url 'customer:list' %}" type="button" class="btn btn-outline-primary">Cancel</a>
+            </div>
+            <div>
+              <a class="text-danger" id="deleteButton" data-bs-toggle="modal"
+                data-bs-target="#deleteModal">Delete Customer</a>
+            </div>
+          </div>
         </form>
       </div>
     </div>
+  </div>
+</div>
+
+<div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+          <div class="modal-header">
+              <h3 class="modal-title" id="deleteModalLabel">Delete Customer</h3>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+              <p>Are you sure you want to delete this customer?</p>
+          </div>
+          <div class="modal-footer">
+              <button type="button" class="btn btn-outline-danger" data-bs-dismiss="modal">Cancel</button>
+              <form method="POST" action="{% url 'customer:delete' customer_profile_form.instance.uuid %}">
+                  {% csrf_token %}
+                  <button type="submit" class="btn btn-danger">Delete Customer</button>
+              </form>
+          </div>
+      </div>
   </div>
 </div>
 {% endblock %}
