--- a/customer/templates/customer/list_view.html
+++ b/customer/templates/customer/list_view.html
@@ -19,6 +19,10 @@
 {{ title }}
 {% endblock %}
 
+{% block app_scripts %}
+<script src="{% static 'customer/js/app.js' %}"></script>
+{% endblock %}
+
 {% block content %}
 <div class="row">
   <div class="col-lg-12 grid-margin stretch-card">
@@ -62,8 +66,12 @@
                   {% endif %}
                 </div>
               </td>
-              <td><a class="view-customer-info" data-url="{% url 'customer:get-customer-info' customer.uuid %}" href=""
-                  data-bs-toggle="modal" data-bs-target="#customerInfo">{{ customer.prospect.name }}</a></td>
+              <td>
+                <a class="action-link view-action" data-url="{% url 'customer:get-customer-info' customer.uuid %}"
+                  data-bs-toggle="modal" data-bs-target="#viewModal">
+                  {{ customer.prospect.name }}
+                </a>
+              </td>
               <td>
                 {% if customer.legal_name %}
                 {% if customer.customer_plan.subscription_plan.name %}
@@ -75,7 +83,8 @@
                     class="text-faded">{% if customer.customer_plan.duration == 12 %}/year{% else %}/month{% endif %}</small>
                 </div>
                 {% else %}
-                <button class="btn btn-sm btn-gradient-danger">Select Plan</button>
+                <a href="{% url 'customer:select-plan' customer.uuid %}" class="btn btn-sm btn-gradient-danger">Select
+                  Plan</a>
                 {% endif%}
                 {% endif%}
               </td>
@@ -83,7 +92,8 @@
                 {% if customer.legal_name %}
                 <span class="text-faded">{{ customer.customer_plan.created_at| date:'d/m/Y' }}</span>
                 {% else %}
-                <a href="{% url 'customer:onboard' customer.uuid %}" class="btn btn-sm btn-gradient-success">Onboard Now</a>
+                <a href="{% url 'customer:onboard' customer.uuid %}" class="btn btn-sm btn-gradient-success">Onboard
+                  Now</a>
                 {% endif%}
               </td>
               <td class="text-center">
@@ -108,7 +118,7 @@
                 </span>
                 {% endif %}
               </td>
-              <td></td>
+              <td><span class="text-faded">{{ customer.manager.full_name }}</span></td>
               <td class="actions-col">
                 <div class="dropdown">
                   <button class="btn p-0" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown"
@@ -116,19 +126,21 @@
                     <i class="mdi mdi-dots-vertical"></i>
                   </button>
                   <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                    <a class="dropdown-item" href="{% url 'customer:edit-info' customer.uuid %}">
+                    <a class="dropdown-item" href="{% url 'customer:update-info' customer.uuid %}">
                       <i class="mdi mdi-pencil-box-outline me-2"></i>
                       Edit Customer Info
                     </a>
-                    <a class="dropdown-item" href="{% url 'customer:update_poc' customer.uuid %}">
+                    <a class="dropdown-item view-action" data-bs-toggle="modal" data-bs-target="#viewModal"
+                      data-url="{% url 'customer:get-poc' customer.uuid %}">
                       <i class="mdi mdi mdi-contacts me-2"></i>
-                      Update Contact Persons
+                      View Contact Persons
                     </a>
                     <a class="dropdown-item" href="#">
                       <i class="mdi mdi-account-multiple me-2"></i>
                       View Users
                     </a>
-                    <a class="dropdown-item" href="#">
+                    <a class="dropdown-item customer-action" data-bs-toggle="modal" data-bs-target="#updateModal"
+                      data-url="{% url "customer:update-csm-ajax" customer.uuid %}">
                       <i class="mdi mdi-account-convert me-2"></i>
                       Re-assign CSM
                     </a>
@@ -152,7 +164,15 @@
     </div>
   </div>
 </div>
-<div class="modal fade" id="customerInfo" tabindex="-1">
+
+<div class="modal fade" id="updateModal" tabindex="-1" data-bs-backdrop="static" data-bs-keyboard="false">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="viewModal" tabindex="-1">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
     </div>
