--- a/prospect/templates/prospect/create_view.html
+++ b/prospect/templates/prospect/create_view.html
@@ -25,12 +25,12 @@
                     {% csrf_token %}
                     <h4 class="card-title">Prospect Information</h4>
                     <p class="card-description">Enter prospect details</p>
-                    {% include 'prospect/prospect_form.html' %}
+                    {% include 'prospect/_partials/_prospect_form.html' %}
                     <hr>
                     <h4 class="card-title">Point of Contact</h4>
                     {{ poc_formset.management_form }}
                     {% for form in poc_formset %}
-                        {% include 'prospect/poc_form.html' with index=forloop.counter %}
+                        {% include 'prospect/_partials/_poc_form.html' with index=forloop.counter %}
                     {% endfor %}
                     <button type="submit" class="btn btn-gradient-primary me-3">Save Prospect</button>
                     <a href="{% url 'prospect:list' %}" type="button" class="btn btn-outline-primary">Cancel</a>
