--- a/prospect/templates/prospect/list_view.html
+++ b/prospect/templates/prospect/list_view.html
@@ -122,7 +122,7 @@
                       <i class="mdi mdi-pencil-box-outline me-2"></i>
                       Edit Prospect Info
                   </a>
-                  <a class="dropdown-item" href="{% url 'prospect:update_poc' prospect.uuid %}">
+                  <a class="dropdown-item" href="{% url 'prospect:update-poc' prospect.uuid %}">
                     
                       <i class="mdi mdi mdi-contacts me-2"></i>
                       Update Contacts Persons
@@ -163,7 +163,7 @@
   </div>
 </div>
 
-<div class="modal fade" id="viewModal" tabindex="-1" data-bs-backdrop="static" data-bs-keyboard="false">
+<div class="modal fade" id="viewModal" tabindex="-1">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
     </div>
